--- a/index.html
+++ b/index.html
@@ -2,6 +2,7 @@
 <html lang="ja">
     <head>
         <meta charset="utf-8">
+        <meta name="viewport" content="width=device-width,initial-scale=1">
         <title>Web Designer - Takahashi Rui</title>
         <meta name="description" content="Webデザイナー Takahasi Ruiのポートフォリオサイトです。">
         <meta name="keywords" content="Web, デザイン, デザイナー, ポートフォリオ, Web制作">
@@ -15,7 +16,7 @@
             <a href="#contact" class="button-contact"><i aria-label="お問い合わせ" class="fa fa-envelope-o"></i></a>
             <div class="profile">
                 <h1 class="site-title abel uppercase text-center">Web Designer <span>Rui Takahashi</span></h1>
-                <img src="./images/img_profile.jpg" alt="プロフィール写真" width="140" height="140" class="block-center profile-icon">
+                <img src="./images/profile.jpg" alt="プロフィール写真" width="140" height="140" class="block-center profile-icon">
                 <p>広島県在住のWebデザイナー、Takahashi Ruiです。オンラインスクールでWeb制作について学び、憧れていたWebデザイナーへと就職活動中です。これからさらにWeb制作の技術や知識を身につけて、Webサイト運用や問題解決のアドバイスもできるデザイナーになりたいと思っています。</p>
             </div>
         </header>
@@ -45,7 +46,7 @@
         <h2 class="text-center">Works</h2>
         <div class="works-box">
             <a href="#">
-                <img src="./images/img_work_site.png" alt="株式会社きらめき コーポレートサイト様 Webサイトデザイン">
+                <img src="./images/image3.jpg" alt="株式会社きらめき コーポレートサイト様 Webサイトデザイン">
                 <div class="works-box-inner">
                     <div class="text-center">
                         <h3>株式会社きらめき コーポレートサイト</h3>
@@ -57,7 +58,7 @@
         </div>
         <div class="works-box">
             <a href="#">
-                <img src="./images/img_work_card.jpg" alt="きらめき花子様 名刺デザイン">
+                <img src="./images/image2.jpg" alt="きらめき花子様 名刺デザイン">
                 <div class="works-box-inner">
                     <div class="text-center">
                         <h3>きらめき花子様 名刺</h3>
@@ -69,7 +70,7 @@
         </div>
         <div class="works-box">
             <a href="#">
-                <img src="./images/img_work_blog.jpg" alt="WordPressオリジナルテーマ">
+                <img src="./images/image1.jpg" alt="WordPressオリジナルテーマ">
                 <div class="works-box-inner">
                     <div class="text-center">
                         <h3>ブログデザイン</h3>
@@ -81,7 +82,7 @@
         </div>
         <div class="works-box">
             <a href="#">
-                <img src="./images/img_work_card.jpg" alt="きらめき花子様 名刺デザイン">
+                <img src="./images/image2.jpg" alt="きらめき花子様 名刺デザイン">
                 <div class="works-box-inner">
                     <div class="text-center">
                         <h3>きらめき花子様 名刺</h3>
@@ -93,7 +94,7 @@
         </div>
         <div class="works-box">
             <a href="#">
-                <img src="./images/img_work_blog.jpg" alt="WordPressオリジナルテーマ">
+                <img src="./images/image1.jpg" alt="WordPressオリジナルテーマ">
                 <div class="works-box-inner">
                     <div class="text-center">
                         <h3>ブログデザイン</h3>
@@ -105,7 +106,7 @@
         </div>
         <div class="works-box">
             <a href="#">
-                <img src="./images/img_work_site.png" alt="株式会社きらめき コーポレートサイト様 Webサイトデザイン">
+                <img src="./images/image3.jpg" alt="株式会社きらめき コーポレートサイト様 Webサイトデザイン">
                 <div class="works-box-inner">
                     <div class="text-center">
                         <h3>株式会社きらめき コーポレートサイト</h3>
@@ -117,7 +118,7 @@
         </div>
     <div class="works-box">
             <a href="#">
-                <img src="./images/img_work_blog.jpg" alt="WordPressオリジナルテーマ">
+                <img src="./images/image1.jpg" alt="WordPressオリジナルテーマ">
                 <div class="works-box-inner">
                     <div class="text-center">
                         <h3>ブログデザイン</h3>
@@ -129,7 +130,7 @@
         </div>
             <div class="works-box">
             <a href="#">
-                <img src="./images/img_work_site.png" alt="株式会社きらめき コーポレートサイト様 Webサイトデザイン">
+                <img src="./images/image3.jpg" alt="株式会社きらめき コーポレートサイト様 Webサイトデザイン">
                 <div class="works-box-inner">
                     <div class="text-center">
                         <h3>株式会社きらめき コーポレートサイト</h3>
@@ -141,7 +142,7 @@
         </div>
         <div class="works-box">
             <a href="#">
-                <img src="./images/img_work_card.jpg" alt="きらめき花子様 名刺デザイン">
+                <img src="./images/image2.jpg" alt="きらめき花子様 名刺デザイン">
                 <div class="works-box-inner">
                     <div class="text-center">
                         <h3>きらめき花子様 名刺</h3>
