--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
             <a href="#contact" class="button-contact"><i aria-label="お問い合わせ" class="fa fa-envelope-o"></i></a>
             <div class="profile">
                 <h1 class="site-title abel uppercase text-center">Web Designer <span>Rui Takahashi</span></h1>
-                <img src="./images/profile.jpg" alt="プロフィール写真" width="140" height="140" class="block-center profile-icon">
+                <img src="./images/profile1.jpg" alt="プロフィール写真" width="140" height="140" class="block-center profile-icon">
                 <p>広島県在住のWebデザイナー、Takahashi Ruiです。オンラインスクールでWeb制作について学び、憧れていたWebデザイナーへと就職活動中です。これからさらにWeb制作の技術や知識を身につけて、Webサイト運用や問題解決のアドバイスもできるデザイナーになりたいと思っています。</p>
             </div>
         </header>
